cloudDbeaver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      containers:
        - name: cloudbeaver
          image: dbeaver/cloudbeaver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8978
          volumeMounts:
            - name: workspace
              mountPath: /opt/cloudbeaver/workspace
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: cloudbeaver-pvc
