cloudDbeaver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudbeaver-ingress
  namespace: cloudbeaver
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cloudbeaver.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudbeaver
                port:
                  number: 80
